--- a/app/src/main/res/layout/hotel_search_layout.xml
+++ b/app/src/main/res/layout/hotel_search_layout.xml
@@ -11,7 +11,9 @@
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-54dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_constraint_layout"
@@ -22,161 +24,161 @@
                 android:id="@+id/title_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Welcome to Hotel Reservation System"
-                android:textSize="30sp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="20dp"
-                android:textColor="@color/black"
                 android:fontFamily="sans-serif-black"
+                android:gravity="center_horizontal"
+                android:text="Welcome to Hotel Reservation System"
                 android:textAlignment="center"
-                android:gravity="center_horizontal"/>
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/check_in_date_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Check In Date"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/title_text_view"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
-                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif"
+                android:gravity="start"
+                android:text="Check In Date"
                 android:textAlignment="textStart"
-                android:gravity="start"/>
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_text_view" />
 
             <DatePicker
                 android:id="@+id/checkin_date_picker_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view"
+                android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="@id/check_in_date_text_view"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/check_in_date_text_view" />
 
             <TextView
                 android:id="@+id/check_out_date_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Check Out Date"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/checkin_date_picker_view"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
-                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif"
+                android:gravity="start"
+                android:text="Check Out Date"
                 android:textAlignment="textStart"
-                android:gravity="start"/>
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/checkin_date_picker_view" />
 
             <DatePicker
                 android:id="@+id/checkout_date_picker_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view"
+                android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="@id/check_out_date_text_view"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/check_out_date_text_view" />
 
             <TextView
                 android:id="@+id/guests_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Number of Guests"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/checkout_date_picker_view"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
-                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif"
+                android:gravity="start"
+                android:text="Number of Guests"
                 android:textAlignment="textStart"
-                android:gravity="start"/>
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/checkout_date_picker_view" />
 
             <EditText
                 android:id="@+id/guests_count_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/guests_text_view"
-                app:layout_constraintTop_toTopOf="@id/guests_text_view"
+                android:hint="Guests Count"
+                android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="@id/guests_text_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:hint="Guests Count"
-                android:inputType="number" />
+                app:layout_constraintStart_toEndOf="@id/guests_text_view"
+                app:layout_constraintTop_toTopOf="@id/guests_text_view" />
 
             <TextView
                 android:id="@+id/name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/guests_text_view"
-                app:layout_constraintTop_toBottomOf="@id/guests_text_view"
-                android:text="Enter Your Name"
-                android:textSize="20sp"
-                android:textColor="@color/black"
                 android:fontFamily="sans-serif"
+                android:gravity="start"
+                android:text="Enter Your Name"
                 android:textAlignment="textStart"
-                android:gravity="start" />
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@id/guests_text_view"
+                app:layout_constraintTop_toBottomOf="@id/guests_text_view" />
 
             <EditText
                 android:id="@+id/name_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/name_text_view"
-                app:layout_constraintTop_toTopOf="@id/name_text_view"
+                android:hint="Your Name"
                 app:layout_constraintBottom_toBottomOf="@id/name_text_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:hint="Your Name" />
+                app:layout_constraintStart_toEndOf="@id/name_text_view"
+                app:layout_constraintTop_toTopOf="@id/name_text_view" />
 
             <TextView
                 android:id="@+id/search_confirm_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                app:layout_constraintStart_toStartOf="@id/guests_text_view"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name_text_view"/>
+                app:layout_constraintStart_toStartOf="@id/guests_text_view"
+                app:layout_constraintTop_toBottomOf="@id/name_text_view" />
 
             <Button
                 android:id="@+id/confirm_my_search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CONFIRM MY SEARCH"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/search_confirm_text_view"/>
+                android:text="CONFIRM MY SEARCH"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/search_confirm_text_view" />
 
             <Button
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SEARCH"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/confirm_my_search_button"/>
+                android:text="SEARCH"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/confirm_my_search_button" />
 
             <Button
                 android:id="@+id/clear_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Clear"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/search_button"/>
+                android:text="Clear"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/search_button" />
 
 
             <Button
                 android:id="@+id/retrieve_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Retrieve From Shared Pref"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/clear_button"/>
+                android:text="Retrieve From Shared Pref"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/clear_button" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
